Fixed the last page bug.